--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- Handles video/image backgrounds -->
         <div class="background-container">
             <video id="bgVideo" class="background-media" muted loop>
-                <source src="background.mp4" type="video/mp4">
+                <source src="background2.mp4" type="video/mp4">
             </video>
             <!-- Background image - controlled by theme selector -->
             <img id="bgImage" class="background-media" src="background.png" alt="">
@@ -255,5 +255,6 @@
     <!-- Main functionality script -->
     <script src="script.js"></script>
 </body>
+
 
 </html>
