modified:   index.html

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 </svg>
                 <!-- Visit counter image from external service -->
                 <!-- CUSTOMIZE: Change the 'page' parameter to your domain -->
-                <!-- <img src="https://visit-counter.vercel.app/counter.png?page=https%3A%2F%2Fcheatin.xyz&s=14&c=ffffff&bg=00000000&no=2&ff=electrolize&tb=&ta=" -->
-                    <!-- alt="visits" class="counter-img"> -->
+                <img src="https://visit-counter.vercel.app/counter.png?page=https%3A%2F%2Fcheatin.xyz&s=14&c=ffffff&bg=00000000&no=2&ff=electrolize&tb=&ta=" -->
+                    alt="visits" class="counter-img">
             </div>
 
             <!-- ========== PROFILE SECTION ========== -->
