change discord and change look

--- a/index.html
+++ b/index.html
@@ -225,9 +225,8 @@
         <div id="copyNotification" class="copy-notification">
             <span id="notificationText">Copied!</span>
         </div>
-        <div id="background-selector" class="discord-activity">
-            <h3 class="activity-title" style="text-align: center;">Background selector</h3>
-            <div class="control-buttons" style="justify-content: center;">
+        <div id="background-selector" class="background-option">
+            <div class="background-option" style="justify-content: center;">
                 <button class="control-btn select" id="cycle1" title="Background 1">
                     1
                 </button>
